# haima

./: CLAUDE.md
haima-api-schema/: Cargo.toml
haima-api-schema/src/: lib.rs
haima-api/src/: routes.rs
haima-core/src/: error.rs
haima-wallet/src/: eip712.rs  lib.rs  signer.rs
haima-x402/: Cargo.toml
haima-x402/src/: bazaar.rs  client.rs  custody_adapter.rs  facilitator.rs  header.rs  lib.rs
haima-x402/tests/: e2e_smoke.rs
life-haima/: Cargo.toml
life-haima/src/: lib.rs
